feat: add logout and ticket search params
